# ProbMonad

./: ProbMonad.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-7.2/8.0.1/doc/enumerable-0.0.3/: LICENSE
.stack-work/install/x86_64-linux/lts-7.2/8.0.1/flag-cache/: ProbMonad-0.1.0.0-EqWOFh2rHEn6lE3wcOQOyN  control-monad-omega-0.3.1-7sfKsMqxG77EECtPWW2L1K  enumerable-0.0.3-3Oga6GEA2O6751ICIDFn2E  tagged-0.8.5-CtgV6EcN0do8F92i1S6iYx  transformers-compat-0.5.1.4-81lZyuOJOvsD0zyCv2TKld
.stack-work/install/x86_64-linux/lts-7.2/8.0.1/lib/x86_64-linux-ghc-8.0.1/ProbMonad-0.1.0.0-EqWOFh2rHEn6lE3wcOQOyN/: Gamble.dyn_hi  Gamble.hi  Infer.dyn_hi  Infer.hi  Lib.dyn_hi  Lib.hi  Simulate.dyn_hi  Simulate.hi
.stack-work/install/x86_64-linux/lts-7.2/8.0.1/lib/x86_64-linux-ghc-8.0.1/ProbMonad-0.1.0.0-HzyMXLsBCzOJ3IcnWfm09n/: Gamble.dyn_hi  Simulate.dyn_hi
.stack-work/install/x86_64-linux/lts-7.2/8.0.1/lib/x86_64-linux-ghc-8.0.1/enumerable-0.0.3-3Oga6GEA2O6751ICIDFn2E/Data/: Enumerable.dyn_hi  Enumerable.hi
.stack-work/install/x86_64-linux/lts-7.2/8.0.1/lib/x86_64-linux-ghc-8.0.1/enumerable-0.0.3-3Oga6GEA2O6751ICIDFn2E/Data/Enumerable/: ControversialFunctionEquality.hi  (+3 more)
.stack-work/install/x86_64-linux/lts-7.2/8.0.1/pkgdb/: ProbMonad-0.1.0.0-HzyMXLsBCzOJ3IcnWfm09n.conf  enumerable-0.0.3-3Oga6GEA2O6751ICIDFn2E.conf  package.cache
app/: Carcass.hs  Main.hs
simple/: Dice  Dice.aux  Dice.hi  Dice.hp  Dice.hs  Dice.ps  README  SimuInf  SimuInf.hi  SimuInf.hs  another  another.hi  another.hs  simsave.hs
src/: Gamble.hs  Infer.hs  Inferences.hs  Simulate.hs  Simulations.hs
